5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_994.log
== SUBMITION (2019-03-30 17:49:03) 
-- CODE:
print("UNIVERSIDADE FEDERAL DO AMAZONAS")
-- EXECUTION TIME:
0.253893
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
UNIVERSIDADE FEDERAL DO AMAZONAS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:50:49) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- EXECUTION TIME:
0.132388
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:50:50) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- EXECUTION TIME:
0.179401
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:50:51) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- EXECUTION TIME:
0.15935
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:50:52) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- EXECUTION TIME:
0.19814
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:50:52) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- ERROR:
File "XXXX", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:50:57) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- ERROR:
File "XXXX", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:50:58) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- ERROR:
File "XXXX", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:50:59) 
-- CODE:
print("U")
4= NIV
5=ERSI
6=DADE
2= FEDERAL
7- DO
8= AMA
9=ZON
10=NAS
-- EXECUTION TIME:
0.137116
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    4= NIV
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:59:16) 
-- CODE:
print("U")
print("ni")
print("ver")
print("sidade")
-- EXECUTION TIME:
0.135751
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
U
ni
ver
sidade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:59:17) 
-- CODE:
print("U")
print("ni")
print("ver")
print("sidade")
-- EXECUTION TIME:
0.181575
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
U
ni
ver
sidade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:59:25) 
-- CODE:
print("U")
print("ni")
print("ver")
print("sidade")

-- EXECUTION TIME:
0.137397
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
U
ni
ver
sidade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:00:45) 
-- CODE:
print("01Universidade")
print("02federal")
print("03do")
print("0004amazonas")


-- EXECUTION TIME:
0.173056
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
01Universidade
02federal
03do
0004amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:01:03) 
-- CODE:
print("01Universidade")
print("02federal")
print("03do")
print("0004amazonas")

01
02
03
0004

-- EXECUTION TIME:
0.194276
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 6
    01
     ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:01:03) 
-- CODE:
print("01Universidade")
print("02federal")
print("03do")
print("0004amazonas")

01
02
03
0004

-- EXECUTION TIME:
0.126662
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 6
    01
     ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:01:30) 
-- CODE:
print("01Universidade")
print("02federal")
print("03do")
print("0004amazonas")

01= 
02
03
0004


-- EXECUTION TIME:
0.144575
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 6
    01= 
     ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:04:34) 
-- CODE:
print("x=un9iversidade")


-- EXECUTION TIME:
0.168327
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
x=un9iversidade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:06:42) 
-- CODE:
print("001")


-- EXECUTION TIME:
0.114997
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:08:42) 
-- CODE:
print("_uni=2")


-- EXECUTION TIME:
0.126942
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
_uni=2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:09:00) 
-- CODE:
print("=2_uni")


-- EXECUTION TIME:
0.118576
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
=2_uni
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:14:55) 
-- CODE:
print("")
x=universidade

-- EXECUTION TIME:
0.13554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/994/main.py", line 2, in <module>
    x=universidade
NameError: name 'universidade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:15:59) 
-- CODE:
print("x=universidade federal")


-- EXECUTION TIME:
0.144736
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
x=universidade federal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:18:15) 
-- CODE:
print("")
texto=universidadex,


-- EXECUTION TIME:
0.199548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/994/main.py", line 2, in <module>
    texto=universidadex,
NameError: name 'universidadex' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:18:48) 
-- CODE:
print("")
texto="universidade"


-- EXECUTION TIME:
0.167611
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:19:29) 
-- CODE:
print("")
print("texto="universidade")


		
-- EXECUTION TIME:
0.119535
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    print("texto="universidade")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:20:03) 
-- CODE:
print("")
print("texto="universidade")


		
-- EXECUTION TIME:
0.156501
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 2
    print("texto="universidade")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:20:03) 
-- CODE:
print("")
print("texto="universidade")


		
-- ERROR:
File "XXXX", line 2
    print("texto="universidade")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:26:03) 
-- CODE:
texto=universidade federal do amazonas)
print("texto")


		
-- ERROR:
File "XXXX", line 1
    texto=universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:26:44) 
-- CODE:
texto=(universidade federal do amazonas)
print("texto")


		
-- EXECUTION TIME:
0.194059
-- ERROR:
  File "/home/codebench/codes/1582/994/main.py", line 1
    texto=(universidade federal do amazonas)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:27:49) 
-- CODE:
texto=("universidade federal do amazonas")
print("texto")

-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:28:08) 
-- CODE:
texto=("universidade federal do amazonas")
print("texto")


-- EXECUTION TIME:
0.131441
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:28:10) 
-- CODE:
texto=("universidade federal do amazonas")
print("texto")


-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:29:22) 
-- CODE:
texto=("universidade federal do amazonas")
print("texto")


-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:29:24) 
-- CODE:
texto=("universidade federal do amazonas")
print("texto")


-- EXECUTION TIME:
0.216039
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:30:01) 
-- CODE:
x=("universidade federal do amazonas")
print("texto")


-- EXECUTION TIME:
0.177775
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:30:02) 
-- CODE:
x=("universidade federal do amazonas")
print("texto")


-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:30:29) 
-- CODE:
x=("universidade federal do amazonas")
print("x")


-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:31:04) 
-- CODE:
texto=("universidade federal do amazonas")
print(texto)


-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:31:04) 
-- CODE:
texto=("universidade federal do amazonas")
print(texto)


-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:31:08) 
-- CODE:
texto=("universidade federal do amazonas")
print(texto)


-- EXECUTION TIME:
0.144917
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:31:22) 
-- CODE:
texto=("universidade federal do amazonas")
print(texto)


-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:31:48) 
-- CODE:
texto=("universidade federal do amazonas")
print(texto)


-- EXECUTION TIME:
0.137631
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:34:47) 
-- CODE:
texto=("Universidade Federal do Amazonas")
print(texto)


-- EXECUTION TIME:
0.194516
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
